k8s_manifests/security/oauth2-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: auth-headers
  namespace: oauth2-proxy-app
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: oauth-auth
  namespace: oauth2-proxy-app
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy-app.svc:80/oauth2/auth
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: oauth-errors
  namespace: oauth2-proxy-app
spec:
  errors:
    query: /oauth2/sign_in?rd={url}
    service:
      name: oauth2-proxy
      port: 80
    status:
      - 401-403
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: public-oauth-auth
  namespace: oauth2-proxy-app
spec:
  forwardAuth:
    address: http://public-oauth2-proxy.oauth2-proxy-app.svc:80/oauth2/auth
    trustForwardHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: public-oauth-errors
  namespace: oauth2-proxy-app
spec:
  errors:
    query: /oauth2/sign_in?rd={url}
    service:
      name: public-oauth2-proxy
      port: 80
    status:
      - 401-403
