k8s_manifests/security/oauth2-proxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: oauth2-proxy
  namespace: oauth2-proxy-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`oauth2.fahmed.org`) || PathPrefix(`/oauth2/`)
      middlewares:
        - name: auth-headers
          namespace: oauth2-proxy-app
      services:
        - name: oauth2-proxy
          port: 80
  tls:
    secretName: oauth2-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: public-oauth2-proxy
  namespace: oauth2-proxy-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`public-oauth2.fahmed.org`) || PathPrefix(`/oauth2/`)
      middlewares:
        - name: auth-headers
          namespace: oauth2-proxy-app
      services:
        - name: public-oauth2-proxy
          port: 80
  tls:
    secretName: oauth2-tls
